--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Lines</title>
+  <title>Lines</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 <script>
 window.requestAnimFrame = (function() {
@@ -30,54 +30,55 @@ function init(elemid) {
 </script><link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
-<!-- partial:index.partial.html -->
-<div id="menu-btn"><i class="fas fa-bars"></i></div>
-<div id="wrapper">
-  <div id="toggles">
-    <div class="slide-container">
-      <div class="slide-title" id="segments-display">Segments: 7</div>
-      <input
-             type="range"
-             min="1"
-             max="25"
-             value="7"
-             step="1"
-             class="rangeslider"
-             id="segments-slider">
-    </div>
-    <div class="slide-container">
-        <div class="slide-title" id="lines-display">Lines: 3</div>
-        <input  
-          type="range"
-          min="1"
-          max="10"
-          value="3"
-          step="1"
-          class="rangeslider"
-          id="lines-slider">
+  <body>
+  <div id="menu-btn"><i class="fas fa-bars"></i></div>
+  <div id="full-btn"><i class="fas fa-expand"></i></div>
+  <div id="wrapper">
+    <div id="toggles">
+      <div class="slide-container">
+        <div class="slide-title" id="segments-display">Segments: 7</div>
+        <input
+              type="range"
+              min="1"
+              max="25"
+              value="7"
+              step="1"
+              class="rangeslider"
+              id="segments-slider">
       </div>
-    <div class="slide-container">
-      <div class="slide-title" id="width-display">Width: 3px</div>
-      <input
-             type="range"
-             min="1"
-             max="20"
-             value="3"
-             step="1"
-             class="rangeslider"
-             id="width-slider">
+      <div class="slide-container">
+          <div class="slide-title" id="lines-display">Lines: 3</div>
+          <input  
+            type="range"
+            min="1"
+            max="5"
+            value="3"
+            step="1"
+            class="rangeslider"
+            id="lines-slider">
+      </div>
+      <div class="slide-container">
+        <div class="slide-title" id="width-display">Width: 3px</div>
+        <input
+              type="range"
+              min="1"
+              max="20"
+              value="11"
+              step="1"
+              class="rangeslider"
+              id="width-slider">
+      </div>
+      <div class="slide-container">
+        <button id="draw-btn">Draw</button>
+        <div id="instructions">Right click anywhere on the canvas to save the image to your computer.</div>
+      </div>
+      <div id="palettes">
+        Color Palettes
+      </div>
     </div>
-    <div class="slide-container">
-      <button id="draw-btn">Draw</button>
-      <div id="instructions">Right click anywhere on the canvas to save the image to your computer.</div>
-    </div>
+    <canvas id="canvas"></canvas>
+    <img id="canvasImg" alt="Right click to save me!"/>
   </div>
-  <canvas id="canvas"></canvas>
-  <img id="canvasImg" alt="Right click to save me!"/>
-</div>
-<!-- partial -->
   <script  src="./script.js"></script>
-
-</body>
+  </body>
 </html>
