add shadows, cleanup sidemenu

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@ function init(elemid) {
               class="rangeslider"
               id="width-slider">
       </div>
-      <div class="slide-container" id="draw-btn-container">
+      <div class="toggle-container">
+        <div class="switch-label" id="shadow-toggle">Shadows</div>
+          <label class="switch">
+            <input id="shadow-switch" type="checkbox">
+            <span class="slider round"></span>
+          </label>
+      </div>
+      <div class="toggle-container" id="draw-btn-container">
         <button id="draw-btn">Draw</button>
       </div>
       <div id="palettes">
